# ancilla

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ancilla_project/: manage.py
ancilla_project/ancilla_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
ancilla_project/ancilla_app/ancilla_vue/: package-lock.json  package.json  vite.config.js
ancilla_project/ancilla_app/migrations/: 0001_initial.py  0002_book_patron_hold_checkout.py  0003_rename_name_book_title.py
ancilla_project/ancilla_project/: asgi.py  settings.py  urls.py  wsgi.py
