[tool.poetry]
name = "ancilla"
version = "0.1.0"
description = "A portfolio project demonstrating Django and Vue in a web-based interlibrary system (ILS)."
authors = ["James Walters <33947683+iamjameswalters@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
